Fix layout problems.

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@
 
 html {
   font-size: 62.5%;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 /* Typography */
 body {
